# SPLIT

./: .gitignore  CHANGELOG.md  CITATION.cff  CITATION.md  LICENSE  README.md  emri_config.json  pyproject.toml  run_job.py  sample_config.json
docs/source/: api_reference.md  changelog.md  conf.py  configuration.md  contributing.md  index.md  index.rst  installation.md  quickstart.md  troubleshooting.md
src/split/: __init__.py  __main__.py  diagnostics.py  moves.py  priors.py  split.py  utils.py
src/split/customEMRIs/: AccEccEqPn5AAK.py  FastKerrEccentricEquatorialAccretionFlux.py
