[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "split"
version = "0.0.1a"
description = "Semi-Coherent EMRI Parameter Estimation on Multi-GPUs"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Shubham Kejriwal" }
]
dependencies = [
    "numpy>=2.0,<2.4",
    "matplotlib>=3.7",
    "corner>=2.2",
    "tqdm>=4.64",
    "emcee>=3.1",
    "scipy>=1.10",
]

[project.optional-dependencies]
gpu = [
    "cupy",
    "eryn",
    "fastlisaresponse-cuda12x",
    "fastemriwaveforms-cuda12x",
    "lisaanalysistools-cuda12x",
    "stableemrifisher",
]

docs = [
    "sphinx",
    "sphinx-rtd-theme",
    "myst-parser",        # Allows you to write docs in Markdown instead of just reST
    "numpydoc",           # Standardizes scientific docstrings (optional but recommended)
]

[project.urls]
"Homepage" = "https://github.com/perturber/SPLIT"
